--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1>Skip The Diet, Just Eat Healthy With Jez Salad</h1>
         <p>Imagine you don’t need a diet because we provide healthy and delicious food for you!</p>
         <a href="#order" role="button">Order Food</a>
+        <img class="background" src="img/background.png" alt="background">
         <div>
             <p>5,000+ Customer</p>
             <p>8,000+ Delivery</p>
