styles for navbar

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jez Salad</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
+        <a class="logo" href="#"><span class="first_part">Jez</span> <span class="second_part">Salad</span></a>
         <nav>
-            <a href="#">Jez Salad</a>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a class="home" href="#home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#about">About Us</a></li>
             </ul>
-            <a href="#sign" role="button">Sign</a>
         </nav>
+        <a href="#sign" role="button" class="sign-in">Sign</a>
     </header>
     
     <section id="home">
