--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
     
     <section id="home">
+        <h2 class="tag">#1 healthy salad</h2>
         <h1>Skip The Diet, Just Eat Healthy With Jez Salad</h1>
         <p>Imagine you don’t need a diet because we provide healthy and delicious food for you!</p>
         <a href="#order" role="button">Order Food</a>
